tests/cases/discard_variable/error/reassign_discard.cb
// エラー: discard変数を再代入しようとする
void main() {
    int _ = 10;
    _ = 20; // エラー: Cannot reference discard variable '_'
    println("Should not reach here");
}
